--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,14 @@ html {
     scroll-behavior: smooth;
 }
 
-body {
-    background-image: url('https://images.unsplash.com/photo-1528459709161-157d86910939?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1108&q=80') no-repeat;
+header {
+    background-color: rgba(243, 193, 223, 0.5);
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 91%);
+}
+
+.header-border {
+    height: 10px;
+    width: 100%;
 }
 
 .emoji {
@@ -76,6 +82,28 @@ body {
     max-width: 700px;
 }
 
+.main-button {
+    border: 2px solid #1a202c;
+    padding: 1rem 1.5rem .8rem;
+    border-radius: 5px;
+    font-size: 1.2rem;
+    position: relative;
+    z-index: 1;
+}
+
+.main-button::before {
+    position: absolute;
+    top: -15%;
+    left: -5%;
+    border-radius: 5px;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(192, 116, 140, 0.5);
+    z-index: -1;
+    content: "";
+    transition: .3s ease-in-out;
+}
+
 .intro-contact .point-right {
     background-image: url("https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/237/white-right-pointing-backhand-index_1f449.png");
     width: 15px;
@@ -100,11 +128,13 @@ body {
 }
 
 .highlight-link {
+    border-bottom: solid 2px #c0748c;
     transition: all 0.3s ease-in-out;
 }
 
 .highlight-link:hover {
-    background: #38a169;
+    /*background: #38a169;*/
+    background: #c0748c;
 }
 
 .cat {
